# ss-cpp

./: .buildinfo  .clang-format  .clang-tidy  .copier-answers.yml  .cppcheck-suppressions.txt  .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  .releaserc.js  .renovaterc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake  CtestConfig.cmake  LICENSE  Makefile  README.md  api.html  changelog.html  contributing.html  copier.yml  genindex.html  index.html  noxfile.py  objects.inv  search.html  searchindex.js  vcpkg.json
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.dev-features  README.md  devcontainer.json
.devcontainer/scripts/: devcontainer-init.sh
.doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/principles/: index.doctree
.github/: codecov.yml
_sources/: index.md.txt
cmake/: CodeCoverage.cmake  ConfigDebug.cmake  ConfigDocs.cmake  ConfigDoxygen.cmake  ConfigFetchDeps.cmake  ConfigGNUInstallDirs.cmake  ConfigIPO.cmake  ConfigSanitizers.cmake  ConfigValgrind.cmake  ConfigureCPMDeps.cmake  ConfigureCoverage.cmake  ConfigureCppcheck.cmake  ConfigureDocs.cmake  ConfigureGtest.cmake  ConfigureVersion.cmake  ConfigureWarningsAndHardening.cmake  DefineDefaults.cmake  FindSphinx.cmake  OSInstall.cmake  PreCommit.cmake  Runpath.cmake  Vcpkg.cmake  apiConfig.cmake.in  build_configuration.md
docs/: api.md  api.rst  conf.py  conf.py.in  index.md  index.rst  requirements.txt
includes/: codecov.yml.jinja  copier-answers-sample.yml  utilities.jinja  variable.jinja
principles/: index.html
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api-config.cmake.in  apiConfig.cmake.in
src/api/src/: api.cpp
src/api/tests/: test_api.cpp
src/app/: CMakeLists.txt  CMakelists.txt  main.cpp
src/authentication/: CMakeLists.txt
src/authentication/include/: helpers.hpp
src/authentication/src/: main.cpp
src/authentication/tests/: CMakeLists.txt  test_authentication.cpp
src/compile/: CMakeLists.txt
src/compile/include/: compile.hpp  distribution.hpp
src/compile/include/impl/: impl.hpp
src/compile/src/: compile.cpp  distribution.cpp
src/compile/tests/: CMakeLists.txt  test_compile.cpp  test_compile_api.cpp
src/compile_module/: CMakeLists.txt
src/compile_module/include/: compile_module.ixx
src/compile_module/src/: compile_module.cpp
src/compile_module/tests/: CMakeLists.txt  test_compile_module.cpp
src/exe/: CMakeLists.txt
src/exe/include/: distribution.hpp  helpers.hpp
src/exe/src/: distribution.cpp  main.cpp
src/exe/tests/: CMakeLists.txt  test_exe.cpp  test_exe_helper.cpp
src/executable/: CMakeLists.txt
src/executable/include/: helpers.hpp
src/executable/src/: main.cpp
src/executable/tests/: test_executable_helper.cpp
src/export_api/: CMakeLists.txt
src/export_api/src/: api.hpp
src/export_api/src/impl/: impl.cpp  impl.hpp
src/header/: CMakeLists.txt
src/header/include/header/: distribution.hpp  header.hpp
src/header/tests/: CMakeLists.txt  test_header.cpp
src/header_only/: CMakeLists.txt
src/header_only/include/: header_only.hpp
src/header_only/tests/: CMakeLists.txt  test_header_only.cpp
src/jni/: CMakeLists.txt
src/jni/include/: jvm_util.hpp
src/jni/tests/java/: MyTest.java
template/: .clang-format  .clang-tidy  .copier-answers.ss-cmake.yml  .copier-answers.ss-license.yml  .editorconfig  .gitignore.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .releaserc.js  .renovaterc.json.jinja  CMakeLists.txt.jinja  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  [% if config_cdash == true %]CTestConfig.cmake[% endif %].jinja  [% if docs_type == 'mkdocs' %]mkdocs.yml[% endif %].jinja  [% if repo_host_type == 'gitlab.com' or repo_host_type == 'gitlab-self-managed' %].gitlab-ci.yml[% endif %].jinja  [% if use_cdash == true %]CTestConfig.cmake[% endif %].jinja  copier.ss-cmake.yml  copier.ss-license.yml  vcpkg.json.jinja
template/src/[% if add_compile_target == true %]compile[% endif %]/: CMakeLists.txt
template/src/[% if add_compile_target == true %]compile[% endif %]/include/: compile.hpp
template/src/[% if add_compile_target == true %]compile[% endif %]/src/: compile.cpp
template/src/[% if add_compile_target == true %]compile[% endif %]/src/impl/: impl.cpp
template/src/[% if add_executable_target ==  true %]app[% endif %]/: CMakeLists.txt
template/src/[% if add_executable_target ==  true %]app[% endif %]/include/: helpers.hpp
template/src/[% if add_executable_target ==  true %]app[% endif %]/src/: app.cpp
template/src/[% if add_header_only_target ==  true %]header[% endif %]/: CMakeLists.txt  header-config.cmake.in
template/src/[% if add_header_only_target ==  true %]header[% endif %]/include/: header.hpp
template/src/[% if add_header_only_target ==  true %]header[% endif %]/tests/: test_header.cpp
template/src/[% if add_header_only_target ==  true %]header_only[% endif %]/tests/: CMakeLists.txt
template/src/[% if add_jni_target == true %]jni[% endif %]/tests/: CMakeLists.txt  test_jni.cpp
template/src/api/: CMakeLists.txt  api-config.cmake.in  apiConfig.cmake.in
template/src/api/src/impl/: impl.cpp
template/src/api/tests/: CMakeLists.txt  test_api.cpp
template/src/header/: CMakeLists.txt
template/src/header/include/: header.hpp
template/src/header/tests/: CMakeLists.txt
template/tests/: CMakeLists.txt
template/tests/api/: CMakeLists.txt  test_api.cpp
template/tests/app/: CMakeLists.txt
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_api.cpp  test_app.cpp
topics/: automate_dependencies.html  hardening.html  index.html  overlays.html  release_workflow.html  security.html  semantic_versioning.html  triplet_presets.html  version_header.html  warnings.html
tutorials/: building.html  commit_convention.html  dependencies.html  development_environment.html  index.html  project_management.html  security.html
(+519 files in other folders)
